--- a/JSFProject/WebContent/WEB-INF/web.xml
+++ b/JSFProject/WebContent/WEB-INF/web.xml
@@ -4,20 +4,25 @@
 	<servlet>
 		<servlet-name>Faces Servlet</servlet-name>
 		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
+    <load-on-startup>1</load-on-startup>
 	</servlet>
-  <servlet-mapping>
-    <servlet-name>Faces Servlet</servlet-name>
-    <url-pattern>*.jsf</url-pattern>
-  </servlet-mapping>
+    <servlet-mapping>
+      <servlet-name>Faces Servlet</servlet-name>
+      <url-pattern>*.jsf</url-pattern> 
+    </servlet-mapping>
     <context-param>
       <param-name>javax.faces.PROJECT_STAGE</param-name>
       <param-value>Development</param-value>
+    </context-param>
+    <context-param>
+      <param-name>org.richfaces.enableControlSkinning</param-name>
+      <param-value>false</param-value>
     </context-param>
     <welcome-file-list>
       <welcome-file>jsp/index.jsp</welcome-file>
     </welcome-file-list>
     <session-config>
-      <session-timeout>1</session-timeout>
+      <session-timeout>10</session-timeout>
     </session-config>
     <context-param>
       <param-name>DBproperty</param-name>
