--- a/JSFProject/src/resources/requests_db2.properties
+++ b/JSFProject/src/resources/requests_db2.properties
@@ -2,3 +2,8 @@ checkUser=SELECT "Type" FROM {0}."Users" WHERE  "UserName"=''{1}'' AND "Password
 registeredUser=INSERT INTO {0}."Users" ("UserName", "Password", "Type") VALUES (?,?,?)
 getAllRecords=SELECT "item", "fullName", "address", "phoneNumber", "creationDate", "mail", "birthDate", "photo" FROM {0}."PhoneBook" LIMIT {1} ,30
 getQualityRecords=SELECT COUNT(*) FROM {0}."PhoneBook"
+addRecord=INSERT INTO {0}."PhoneBook" ("fullName", "address", "phoneNumber", "mail", "birthDate", "photo") VALUES (?,?,?,?,?,?)
+changeRecord=UPDATE {0}."PhoneBook" SET "fullName"=?, "address"=?, "phoneNumber"=?, "mail"=?, "birthDate"=?,"photo"=? WHERE {0}."PhoneBook"."item"=?
+deleteRecord=DELETE FROM {0}."PhoneBook" WHERE {0}."PhoneBook"."item"=?
+getUsers=SELECT "UserName","Type" FROM {0}."Users"
+deleteUser=DELETE FROM {0}."Users" WHERE {0}."Users"."UserName"=?
