add last functions
Change-Id: I2b48f26c170eaf39c912caef086417cc5589cc1f

--- a/JSFProject/src/resources/requests_db2.properties
+++ b/JSFProject/src/resources/requests_db2.properties
@@ -7,3 +7,5 @@ changeRecord=UPDATE {0}."PhoneBook" SET "fullName"=?, "address"=?, "phoneNumber"
 deleteRecord=DELETE FROM {0}."PhoneBook" WHERE {0}."PhoneBook"."item"=?
 getUsers=SELECT "UserName","Type" FROM {0}."Users"
 deleteUser=DELETE FROM {0}."Users" WHERE {0}."Users"."UserName"=?
+searchAllColumns=SELECT "item","fullName","address","phoneNumber","creationDate","mail","birthDate","photo"  FROM {0}."PhoneBook" WHERE LOWER("fullName") LIKE ''%{1}%'' OR LOWER("address") LIKE ''%{1}%'' OR LOWER("phoneNumber") LIKE ''%{1}%''
+searchCertainColumn=SELECT "item","fullName","address","phoneNumber","creationDate","mail","birthDate","photo" FROM {0}."PhoneBook" WHERE LOWER("{1}") LIKE ''%{2}%''
