Add last functions
Change-Id: I5d80a5018f2c0c0924e04408669b9e9d0519be61

--- a/JSFProject/src/resources/requests_db2.properties
+++ b/JSFProject/src/resources/requests_db2.properties
@@ -1,6 +1,6 @@
 checkUser=SELECT "Type" FROM {0}."Users" WHERE  "UserName"=''{1}'' AND "Password"=''{2}''
 registeredUser=INSERT INTO {0}."Users" ("UserName", "Password", "Type") VALUES (?,?,?)
-getAllRecords=SELECT "item", "fullName", "address", "phoneNumber", "creationDate", "mail", "birthDate", "photo" FROM {0}."PhoneBook" LIMIT {1} ,30
+getAllRecords=SELECT "item", "fullName", "address", "phoneNumber", "creationDate", "mail", "birthDate", "photo" FROM {0}."PhoneBook" ORDER BY "item" DESC LIMIT {1} ,30 
 getQualityRecords=SELECT COUNT(*) FROM {0}."PhoneBook"
 addRecord=INSERT INTO {0}."PhoneBook" ("fullName", "address", "phoneNumber", "mail", "birthDate", "photo") VALUES (?,?,?,?,?,?)
 changeRecord=UPDATE {0}."PhoneBook" SET "fullName"=?, "address"=?, "phoneNumber"=?, "mail"=?, "birthDate"=?,"photo"=? WHERE {0}."PhoneBook"."item"=?
